# GHA-GitOps-project-app

./: pyproject.toml
.github/workflows/: sample-app.yaml
app/: main.py
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
